# DjangoStripePayment

./: .env-example  .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
payments/: admin.py  models.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_product_active_product_metadata_paymentsession.py  0003_alter_product_quantity.py
payments/templates/: base.html  cancel.html  checkout.html  product_list.html  success.html
