[tool.poetry]
name = "stripepayment"
version = "0.1.0"
description = ""
authors = ["Akromjon <152626511+RustamovAkrom@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
django-environ = "^0.11.2"
stripe = "^11.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
